--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pensamento computacional</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/base.css">
+
 </head>
 <body>
     <header>
+     <div class="centralizar_cabecalho">
+            <div class="logo">
 
+            </div>
+            <div class="menu">
+                 <nav>
+                     <ul>
+                         <li> 
+                             <a href="index.html">HOME</a>
+                            </li>
+                         <li> 
+                             <a href="">SOBRE</a>
+                            </li>
+                         <li> 
+                             <a href="">CONTATO</a>
+                            </li>
+                     </ul>
+                 </nav>
+            </div>
+    </div>
     </header>
     <main>
 
